fixed overflow

--- a/timeline/client/styles/main.scss
+++ b/timeline/client/styles/main.scss
@@ -71,10 +71,13 @@
 
 .feed-wrap{
 	min-height: 100%;
+	overflow-x: scroll;
+	overflow-y: hidden;
 }
 
 .feed{
 	min-height: 100%;
+	min-width: 300vw;
 	position: relative;
 	.feed-cursor{
 		position: absolute;
